Fixed div content alignments.

--- a/css/contact-details.css
+++ b/css/contact-details.css
@@ -5,7 +5,7 @@
     background-size: cover;
     justify-content: center;
     width: 600px;
-    height: 240px;
+    height: 270px;
     margin:0 auto;
 }
 
