--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,3 @@
-#footer-wrapper {
-    background: rgba(0,0,0,0.2);
-    background-size: cover;
-    justify-content: center;
-    width: 400px;
-}
-
 #footer-content {
     color: burlywood;
     font-weight: 600;
@@ -14,7 +7,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    padding-top: 40px;
+    padding-top: 30px;
     text-align: center;
     align-self: center;
 }
